Tried to upload a favicon icon but failed. Will try again.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 
     <title>Megan Swenson</title>
+    <link rel="shortcut icon" type="img.jpg" href="./assets/images/plant-icon.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
