Starting on home page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./assets/images/house-plant.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -34,7 +34,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 
     <title>Megan Swenson</title>
-    <link rel="shortcut icon" type="img.jpg" href="./assets/images/plant-icon.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
